Fixed category picker alignment

--- a/src/core/editToolbar.css
+++ b/src/core/editToolbar.css
@@ -1,5 +1,6 @@
 #editToolbarExt {
   display: inline-block;
+  width: 100%;
 }
 
 .editToolbarDiv {
